--- a/.github/workflow/ann_kozakova.yml
+++ b/.github/workflow/ann_kozakova.yml
@@ -3,3 +3,18 @@ on:
   push:
     branches: [ "task-6" ]
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '1.23.1'
+      - name: Test with Go
+        run: go test -json > TestResults-${{ go-version }}.json
+      - name: Upload Go test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: Go-results-${{ go-version }}
+          path: TestResults-${{ go-version }}.json
