--- a/.github/workflows/ann_kozakova.yml
+++ b/.github/workflows/ann_kozakova.yml
@@ -12,9 +12,9 @@ jobs:
         with:
           go-version: '1.23.1'
       - name: Test with Go
-        run: go test -json > TestResults-${{ go-version }}.json
+        run: go test -json > TestResults.json
       - name: Upload Go test results
         uses: actions/upload-artifact@v4
         with:
-          name: Go-results-${{ go-version }}
-          path: TestResults-${{ go-version }}.json
+          name: Go-results
+          path: TestResults.json
