Work wuth input

--- a/alex.udalov/task-3/config.yaml
+++ b/alex.udalov/task-3/config.yaml
@@ -1,2 +1,2 @@
-input-file: "source/input_02_03_2002.xml"
-output-file: "result/output_02_03_2002.json"
+input-file: "source/input.xml"
+output-file: "result/output.json"
