--- a/elina.klebleeva/task-5/.golangci.yaml
+++ b/elina.klebleeva/task-5/.golangci.yaml
@@ -26,7 +26,7 @@ linters-settings:
     sections:
       - standard
       - default
-      - prefix(example_mock)
+      - prefix(github.com/EmptyInsid/task-5)
     skip-generated: false
     custom-order: true
   depguard:
@@ -37,3 +37,8 @@ linters-settings:
         allow:
           - $gostd
           - github.com/spbpu_go_course/lab_5
+
+output:
+  formats:
+    - format: checkstyle
+      path: ./cilint_reports/report_after.xml
