--- a/.github/workflows/ann_kozakova.yml
+++ b/.github/workflows/ann_kozakova.yml
@@ -11,5 +11,9 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '1.23.1'
+      - name: cd into dir
+        run: cd ann.kozakova/task-7
       - name: Test db with Go
-        run: go test ./ann.kozakova/task-7/internal/db
+        run: go test ./internal/db
+      - name: Test wifi with Go
+        run: go test ./internal/wifi
