--- a/.github/workflows/ann_kozakova.yml
+++ b/.github/workflows/ann_kozakova.yml
@@ -11,7 +11,9 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '1.23.1'
+      - name: cd to dir
+        run: cd /home/runner/work/lets-go-programming-v2024-autumn-spbstu/lets-go-programming-v2024-autumn-spbstu/ann.kozakova/task-7
       - name: Test db with Go
-        run: go test /home/runner/work/lets-go-programming-v2024-autumn-spbstu/lets-go-programming-v2024-autumn-spbstu/ann.kozakova/task-7/internal/db
+        run: go test ./internal/db
       - name: Test wifi with Go
-        run: go test /home/runner/work/lets-go-programming-v2024-autumn-spbstu/lets-go-programming-v2024-autumn-spbstu/ann.kozakova/task-7/internal/wifi
+        run: go test ./internal/wifi
