--- a/.github/workflows/ann_kozakova.yml
+++ b/.github/workflows/ann_kozakova.yml
@@ -12,7 +12,10 @@ jobs:
         with:
           go-version: '1.23.1'
       - name: cd to dir
-        run: cd /home/runner/work/lets-go-programming-v2024-autumn-spbstu/lets-go-programming-v2024-autumn-spbstu/ann.kozakova/task-7
+        run: cd /ann.kozakova/task-7
+      - name: Install dependencies
+        run: go mod tidy
+        working-directory: task-7
       - name: Test db with Go
         run: go test ./internal/db
       - name: Test wifi with Go
