--- a/.github/workflows/ann_kozakova.yml
+++ b/.github/workflows/ann_kozakova.yml
@@ -11,11 +11,9 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '1.23.1'
-      - name: cd to dir
-        run: cd ./ann.kozakova/task-7
-      - name: Install dependencies
-        run: go mod tidy
       - name: Test db with Go
         run: go test ./internal/db
+        working-directory: ann.kozakova/task-7
       - name: Test wifi with Go
         run: go test ./internal/wifi
+        working-directory: ann.kozakova/task-7
