--- a/.github/workflows/ann_kozakova.yml
+++ b/.github/workflows/ann_kozakova.yml
@@ -17,3 +17,7 @@ jobs:
       - name: Test wifi with Go
         run: go test ./internal/wifi
         working-directory: ann.kozakova/task-7
+      - name: Install golangci-lint
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s – -b (go env GOPATH)/bin v1.62.0
+      - name: Linter db
+        run: golangci-lint run –config ./ann.kozakova/task-7/config/golangci.yml
