--- a/.github/workflows/ann_kozakova.yml
+++ b/.github/workflows/ann_kozakova.yml
@@ -18,6 +18,6 @@ jobs:
         run: go test ./internal/wifi
         working-directory: ann.kozakova/task-7
       - name: Install golangci-lint
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s – -b (go env GOPATH)/bin v1.62.0
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
       - name: Linter db
         run: golangci-lint run –config ./ann.kozakova/task-7/config/golangci.yml
