--- a/.github/workflows/ann_kozakova.yml
+++ b/.github/workflows/ann_kozakova.yml
@@ -21,3 +21,4 @@ jobs:
         run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
       - name: Linter db
         run: golangci-lint run –config ./ann.kozakova/task-7/config/golangci.yml
+        working-directory: ann.kozakova/task-7/internal
