--- a/.github/workflows/ann_kozakova.yml
+++ b/.github/workflows/ann_kozakova.yml
@@ -20,5 +20,5 @@ jobs:
       - name: Install golangci-lint
         run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
       - name: Linter db
-        run: golangci-lint run –config ../config/golangci.yml
+        run: golangci-lint run --config=../config/golangci.yml
         working-directory: ann.kozakova/task-7/internal
