[TASK-7] Ruined name of test again

--- a/.github/workflows/danil_novkhatskiy.yml
+++ b/.github/workflows/danil_novkhatskiy.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: ["danil.novokhatskiy/task-7"]
 jobs:
-  My tests:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
