--- a/danil.novokhatskiy/task-7/golangci.yaml
+++ b/danil.novokhatskiy/task-7/golangci.yaml
@@ -37,8 +37,6 @@ linters-settings:
   depguard:
     rules:
       main:
-        files:
-          - !$test
         allow:
           - $gostd
-          - github.com/spbpu_go_course/lab_5
+          - "github.com/task-7/internal/wifi"
