[TASK-7] changed golangci

--- a/danil.novokhatskiy/task-7/golangci.yaml
+++ b/danil.novokhatskiy/task-7/golangci.yaml
@@ -9,17 +9,19 @@ output:
 
 linters:
   enable-all: true
+  enable:
+    - copyloopvar
   disable:
-    - exhaustivestruct
-    - ifshort
-    - maligned
-    - interfacer
-    - deadcode
-    - golint
-    - varcheck
-    - structcheck
-    - nosnakecase
-    - scopelint
+   # - exhaustivestruct
+   # - ifshort
+   # - maligned
+   # - interfacer
+   # - deadcode
+   # - golint
+   # - varcheck
+   # - structcheck
+   # - nosnakecase
+   # - scopelint
     - varnamelen
     - forbidigo
     - goimports
