[TASK-7] understand fault and change place workflow

--- a/.github/workflows/elina_klebleeva.yml
+++ b/.github/workflows/elina_klebleeva.yml
@@ -3,6 +3,8 @@ name: Go
 on:
   push:
     branches: [ "elina-klebleeva-task-7" ]
+  pull_request:
+    branches: [ "elina-klebleeva-task-7" ]
 
 jobs:
   Go-Tests:
