--- a/.github/workflows/elina_klebleeva.yml
+++ b/.github/workflows/elina_klebleeva.yml
@@ -15,10 +15,17 @@ jobs:
       with:
         go-version: '1.23.2'
 
-    - name: database
-      working-directory: elina.klebleeva/task-7/internal/db
-      run: go test -v ./...
+    - name: test_database
+      working-directory: elina.klebleeva/task-7
+      run: go test -v internal/db -json > actions_retports/db_report.json
       
-    - name: wifi
-      working-directory: elina.klebleeva/task-7/internal/wifi
-      run: go test -v ./...
+    - name: test_wifi
+      working-directory: elina.klebleeva/task-7
+      run: go test -v internal/wifi -json > actions_retports/wifi_report.json
+
+    - name: install_golangci_lint
+      run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
+    
+    - name: run_golanci_lint
+      working-directory: elina.klebleeva/task-7
+      run: golangci-lint run
