[TASK-6] Change golangci

--- a/maksim.kladkovoj/task-6/.golangci.yaml
+++ b/maksim.kladkovoj/task-6/.golangci.yaml
@@ -5,6 +5,16 @@ run:
 linters:
   enable-all: true
   disable:
+    - exhaustivestruct
+    - ifshort
+    - maligned
+    - interfacer
+    - deadcode
+    - golint
+    - varcheck
+    - structcheck
+    - nosnakecase
+    - scopelint
     - varnamelen
     - forbidigo
     - goimports
