--- a/maksim.kladkovoj/task-7/.github/workflows/maksim_kladkovoj.yml
+++ b/maksim.kladkovoj/task-7/.github/workflows/maksim_kladkovoj.yml
@@ -3,6 +3,8 @@ name: maksim_kladkovoj
 on:
   push:
     branches: ["maksim.kladkovoj/task-7"]
+  pull-reqest:
+    branches: ["master"]
 
 jobs:
   build:
@@ -16,12 +18,12 @@ jobs:
         go-version: '1.23'
 
     - name: Test database
-      working-directory: ./maksim.kladkovoj/task-7/internal/db
-      run: go test -v ./...
+      working-directory: ./maksim.kladkovoj/task-7
+      run: go test -v ./internal/db/...
 
     - name: Test wifi
-      working-directory: ./maksim.kladkovoj/task-7/internal/wifi
-      run: go test -v ./...
+      working-directory: ./maksim.kladkovoj/task-7
+      run: go test -v ./internal/wifi/...
 
     - name: Install golangci-lint
       run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
