--- a/.github/workflows/maksim_kladkovoj.yml
+++ b/.github/workflows/maksim_kladkovoj.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Install golangci-lint
       run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
 
-    - name: Linting on gol golangci-lint
+    - name: Linting on golangci-lint
       working-directory: ./maksim.kladkovoj/task-7
-      run: golangci-lint run --config=../config/golangci.yml
+      run: golangci-lint run --config=./golangci.yml
