[TASK-7] Third fixed golangci call

--- a/.github/workflows/maksim_kladkovoj.yml
+++ b/.github/workflows/maksim_kladkovoj.yml
@@ -29,4 +29,4 @@ jobs:
 
     - name: Linting on golangci-lint
       working-directory: ./maksim.kladkovoj/task-7
-      run: golangci-lint run --config=./.golangci.yml
+      run: golangci-lint run --config=./.golangci.yaml
