--- a/gleb.madyarov/task-7/.github/workflows/gleb_madyarov.yml
+++ b/gleb.madyarov/task-7/.github/workflows/gleb_madyarov.yml
@@ -17,16 +17,16 @@ jobs:
         go-version: '1.22.2'
 
     - name: Test DB
-      working-directory: ./gleb_madyarov/task-7
+      working-directory: ./gleb.madyarov/task-7
       run: go test -v ./internal/db/...
 
     - name: Test WiFi
-      working-directory: ./gleb_madyarov/task-7
+      working-directory: ./gleb.madyarov/task-7
       run: go test -v ./internal/wifi/...
 
     - name: Install golangci-lint
       run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
 
     - name: Run golangci-lint
-      working-directory: ./gleb_madyarov/task-7
+      working-directory: ./gleb.madyarov/task-7
       run: golangci-lint run --config=.golangci.yml
