--- a/.github/workflows/anton.piyavkin.yml
+++ b/.github/workflows/anton.piyavkin.yml
@@ -26,5 +26,5 @@ jobs:
         run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
 
       - name: Check linter
-        run: golangci-lint run --config=../config/golangci.yml
         working-directory: anton.piyavkin/task-7
+        run: golangci-lint run --config=./config/.golangci.yaml
