--- a/.github/workflows/elina_klebleeva.yml
+++ b/.github/workflows/elina_klebleeva.yml
@@ -15,17 +15,17 @@ jobs:
       with:
         go-version: '1.23.2'
 
-    - name: test_database
+    - name: Test Database
       working-directory: elina.klebleeva/task-7
       run: go test -v ./internal/db/...
 
-    - name: test_wifi
+    - name: Test Wifi
       working-directory: elina.klebleeva/task-7
       run: go test -v ./internal/wifi/...
 
-    - name: install_golangci_lint
+    - name: Install golangci-lint
       run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
     
-    - name: run_golanci_lint
+    - name: Run golanci-lint
       working-directory: elina.klebleeva/task-7
       run: golangci-lint run
