--- a/sofia.dudkina/task-6/.golangci.yaml
+++ b/sofia.dudkina/task-6/.golangci.yaml
@@ -5,6 +5,8 @@ run:
 linters:
   enable-all: true
   disable:
+    - execinquery
+    - exportloopref
     - exhaustivestruct
     - ifshort
     - maligned
@@ -26,14 +28,12 @@ linters-settings:
     sections:
       - standard
       - default
-      - prefix(example_mock)
+      - prefix(github.com/sssidkn/task-6)
     skip-generated: false
     custom-order: true
   depguard:
     rules:
       main:
-        files:
-          - !$test
         allow:
           - $gostd
           - github.com/spbpu_go_course/lab_5
