[TASK-6] fix linting#1

--- a/sofia.dudkina/task-6/.golangci.yaml
+++ b/sofia.dudkina/task-6/.golangci.yaml
@@ -36,4 +36,4 @@ linters-settings:
       main:
         allow:
           - $gostd
-          - github.com/spbpu_go_course/lab_5
+          - 'github.com/mdlayher/wifi'
