--- a/maksim.kladkovoj/task-6/.golangci.yaml
+++ b/maksim.kladkovoj/task-6/.golangci.yaml
@@ -36,4 +36,4 @@ linters-settings:
           - !$test
         allow:
           - $gostd
-          - github.com/spbpu_go_course/lab_5
+          - github.com/Mmmakskl/task-6
