--- a/sofia.dudkina/task-7/.golangci.yaml
+++ b/sofia.dudkina/task-7/.golangci.yaml
@@ -5,22 +5,11 @@ run:
 linters:
   enable-all: true
   disable:
-    - execinquery
     - exportloopref
-    - exhaustivestruct
-    - ifshort
     - maligned
-    - interfacer
-    - deadcode
-    - golint
-    - varcheck
-    - structcheck
-    - nosnakecase
-    - scopelint
     - varnamelen
     - forbidigo
     - goimports
-
   fast: false
 
 linters-settings:
@@ -37,3 +26,5 @@ linters-settings:
         allow:
           - $gostd
           - 'github.com/mdlayher/wifi'
+          - 'github.com/sssidkn/example_mock/internal/wifi'
+          - 'github.com/sssidkn/example_mock/internal/db'
