--- a/.github/workflows/danil_novkhatskiy.yml
+++ b/.github/workflows/danil_novkhatskiy.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Configuration of Golang
         uses: actions/setup-go@v3
         with:
-          go-version: '1.23'
+          go-version: '1.23.3'
       - name: Test DataBase
         run: go test ./internal/db
         working-directory: danil.novokhatskiy/task-7
@@ -19,9 +19,23 @@ jobs:
         run: go test ./internal/wifi
         working-directory: danil.novokhatskiy/task-7
 
-      - name: Installation Golangci-lint
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
-      - name: Linter test db
 
-        run: golangci-lint run --config=./golangci.yaml
-        working-directory: danil.novokhatskiy/task-7
+  golangci:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.23.3'
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.62.0
+          working-directory: danil.novokhatskiy/task-7
+     # - name: Installation Golangci-lint
+     #   run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
+     # - name: Linter test db
+
+     #   run: golangci-lint run --config=./golangci.yaml
+      #  working-directory: danil.novokhatskiy/task-7
