--- a/.github/workflows/danil_novkhatskiy.yml
+++ b/.github/workflows/danil_novkhatskiy.yml
@@ -21,7 +21,7 @@ jobs:
 
 
   golangci:
-    name: lint
+    name: linter
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -33,9 +33,4 @@ jobs:
         with:
           version: v1.62.0
           working-directory: danil.novokhatskiy/task-7
-     # - name: Installation Golangci-lint
-     #   run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.62.0
-     # - name: Linter test db
 
-     #   run: golangci-lint run --config=./golangci.yaml
-      #  working-directory: danil.novokhatskiy/task-7
