--- a/alex.udalov/task-7/.github/workflows/alex_udalov.yml
+++ b/alex.udalov/task-7/.github/workflows/alex_udalov.yml
@@ -2,7 +2,8 @@ name: Run Tests
 
 on:
   push:
-    branches: [task-7]  
+    branches: 
+      - TASK-7  
 
 jobs:
   test:
@@ -21,4 +22,4 @@ jobs:
       run: go mod tidy
 
     - name: Run tests
-      run: go test ./...  
+      run: go test ./... 
