--- a/alex.udalov/task-7/.github/workflows/alex_udalov.yml
+++ b/alex.udalov/task-7/.github/workflows/alex_udalov.yml
@@ -5,20 +5,16 @@ on:
     branches: ["TASK-7"]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
 
+  Go-Tests:
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
         go-version: '1.19'  
-
-    - name: Install dependencies
-      run: go mod tidy
 
     - name: Run tests
       run: go test ./... 
