--- a/alex.udalov/task-7/.github/workflows/alex_udalov.yml
+++ b/alex.udalov/task-7/.github/workflows/alex_udalov.yml
@@ -2,19 +2,24 @@ name: Run Tests
 
 on:
   push:
-    branches: ["TASK-7"]
+    branches:
+      - TASK-7  
 
 jobs:
-
   Go-Tests:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
         go-version: '1.19'  
 
+    - name: Install dependencies
+      run: go mod tidy
+
     - name: Run tests
-      run: go test ./... 
+      run: go test ./...
