--- a/alex.udalov/.github/workflows/alex_udalov.yml
+++ b/alex.udalov/.github/workflows/alex_udalov.yml
@@ -3,7 +3,7 @@ name: Run Tests
 on:
   push:
     branches:
-      - task-7  
+      - TASK-7  
 
 jobs:
   Go-Tests:
@@ -16,10 +16,11 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: '1.19'  
+        go-version: '1.19' 
 
     - name: Install dependencies
       run: go mod tidy
 
-    - name: Run tests
-      run: go test ./...
+    - name: Run tests in specific packages
+      run: |
+        go test ./task-7/internal/wifi ./task-7/internal/db  
