--- a/.github/workflows/alina_mamonova.yml
+++ b/.github/workflows/alina_mamonova.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.23.3go
+          go-version: 1.23.1
 
       - name: Test DataBase
         working-directory: ./alina.mamonova/task-7
