--- a/alina.mamonova/task-6/.golangci.yaml
+++ b/alina.mamonova/task-6/.golangci.yaml
@@ -17,7 +17,7 @@ linters-settings:
     sections:
       - standard
       - default
-      - prefix(example_mock)
+      - prefix(github.com/hahapathetic/task-6)
     skip-generated: false
     custom-order: true
   depguard:
@@ -27,7 +27,7 @@ linters-settings:
           - !$test
         allow:
           - $gostd
-          - github.com/spbpu_go_course/lab_5
+          - github.com/mdlayher/wifi
 #output:
 #  formats:
 #    - format: checkstyle
