[TASK-9] fixed some bugs

--- a/averich.vladimir/task-9/config/config.yaml
+++ b/averich.vladimir/task-9/config/config.yaml
@@ -2,7 +2,7 @@ database:
   host: "localhost"
   port: 5432
   user: "postgres"
-  Password: "mysecretpassword"
+  Password: "123"
   dbname: "contacts"
 server:
   port: 8080
